--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
 		<div id="news" class="content-left middle-section">
       <!-- <h2>News</h2> -->
         <ul>
-          <li> <b>New website is live!</b> <i>on Nov 24 2022</i></li>
-          <li> <b>I will be presenting at the Queer in AI conference at NeurIPS 2022.</b> <i>on Nov 23 2022</i> </li>
+          <li> <b>I will be presenting at the Queer in AI workshop at NeurIPS 2022.</b> <i>on Nov 28 2022</i></li>
+          <li> <b>New website is live!</b> <i>on Nov 23 2022</i></li>
           <li> <b>I gave a guest lecture at UNC.</b> <i>on Nov 22 2022</i> 
           <li> <b>I was awarded MIT's Presidential Fellowship and will start my PhD in July 2022.</b> <i>on Mar 24 2022</i></li>
         </ul>
