--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,18 @@ h1 {
     color: var(--dark-gray);
 }
 
+
+#publication-links-pubpage {
+    margin-top: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    vertical-align: middle;
+    color: var(--dark-gray);
+}
+
 #publication-links a, #publication-links a:link, #publication-links a:visited {
     background-color: var(--white);
     color: var(--very-dark-gray);
@@ -350,6 +362,35 @@ h1 {
     filter: drop-shadow(2px 2px 2px var(--dark-gray));
 
     vertical-align: middle;
+}
+
+#publication-links-pubpage a, #publication-links-pubpage a:link, #publication-links-pubpage a:visited {
+	background-color: var(--white);
+    color: var(--very-dark-gray);
+
+    display: inline-block;
+    height: 100%;
+
+	padding: 0.4em 1.3em 0.4em 1.3em;
+    margin-right: 5px;
+    margin-bottom: 5px;
+
+	border-radius: 10px;
+    border-color: var(--red);
+    border-style: solid;
+
+	font-size: 1.15em;
+	text-decoration: none;
+    font-family: 'Roboto Flex', sans-serif;
+    filter: drop-shadow(2px 2px 2px var(--dark-gray));
+
+    vertical-align: middle;
+}
+
+#publication-links-pubpage a:hover, #publication-links-pubpage a:hover .fa-solid, #publication-links-pubpage a:hover .bi {
+	text-decoration: none;
+    background-color: var(--red);
+    color: var(--white);
 }
 
 #publication-links .fa-solid, #publication-links .fa {
